--- a/paper/references.bib
+++ b/paper/references.bib
@@ -21,43 +21,7 @@
     doi = {10.21105/joss.01686},
   }  
   
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
   
   
 @Article{rohan,
@@ -70,5 +34,52 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }  
+
   
-  
+@misc{UNStats2023,
+  author = {{United Nations Statistics Division}},
+  title = {Page Title Here},
+  year = {2023},
+  howpublished = {\url{https://unstats.un.org/wiki/pages/viewpage.action?pageId=143100203}},
+  note = {Accessed: date-of-access}
+}
+
+
+@book{Irwin2011,
+  title={Trade Policy Disaster: Lessons from the 1930s},
+  author={Irwin, Douglas A.},
+  year={2011},
+  publisher={MIT Press}
+}
+
+@Manual{HarrellHmisc,
+  title = {Hmisc: Harrell Miscellaneous},
+  author = {Frank E. Harrell Jr and with contributions from Charles Dupont and many others},
+  year = {2023}, 
+  note = {R package version x.x.x},  
+  url = {https://CRAN.R-project.org/package=Hmisc}
+}
+
+@misc{gitsummary2023,
+  author = {Developer's Name},
+  title = {gitsummary: A Tool for Summarizing Git Repository Activities},
+  year = {2023},
+  note = {Available at: \url{https://github.com/username/gitsummary} (Accessed: Date)},
+  version = {1.0}
+}
+
+@Manual{Wickham2016ggplot2,
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  author = {Hadley Wickham},
+  year = {2016},
+  note = {R package version x.x.x},
+  url = {https://CRAN.R-project.org/package=ggplot2}
+}
+
+@Manual{Zhu2019kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2019},
+  note = {R package version x.x.x}, 
+  url = {https://CRAN.R-project.org/package=kableExtra}
+}
